--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "runmd": "0.1.7"
   },
   "scripts": {
-    "test": "mocha test/test.js",
-    "md": "runmd --watch --output=README.md README_js.md",
-    "prepare": "runmd --output=README.md README_js.md"
+    "test": "mocha test/test.js"
   },
   "browser": {
     "./lib/rng.js": "./lib/rng-browser.js",
